--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -2076,7 +2076,6 @@
     "ble_ota_step_stop_title": "Ustaviti posodobitev vdelane programske opreme?",
     "ble_ota_step_progress_hint1": "Priprava posodobitve …",
     "ble_ota_step_progress_hint2": "Posodabljanje ...",
-    "ble_ota_error_sub_title": "Posodobitev vdelane programske opreme ni uspela",
     "ble_ota_error_content": "Med posodabljanjem imejte svoje naprave blizu. Preverite povezavo Bluetooth.",
     "ble_ota_error_exit": "IZHOD POSODOBITEV",
     "ble_ota_unselect_device": "Izbran ni noben dodatek Bluetooth!",
@@ -3088,12 +3087,12 @@
     "scan_again": "skeniraj ponovno",
     "last_scanned": "Nazadnje skenirano",
     "energy_used": "Porabljena energija",
-    "dw_statistics_desc": "",
+    "dw_statistics_desc": "Te statistični podatki temeljijo na statistiki omrežja, del podatkov pa temelji na laboratorijskih pogojih merjenja, le za uporabo uporabnikov.",
     "total_cycles": "",
     "dw_error_f56": "",
     "washer_dishes_stop": "",
-    "washer_stopped": "",
-    "dw_dish_clean": "",
+    "washer_stopped": "Pranje v ## je bilo ustavljeno.",
+    "dw_dish_clean": "Vaša posoda je čista",
     "dw_error_f43": "",
     "dw_error_f65": "",
     "surname": "",
@@ -3190,30 +3189,30 @@
     "system_settings_content": "Nastavite svetlost zaslona vaše naprave, spremenite barvno temo, velikost pisave in nastavite, kdaj zaslon vaše naprave preklopi v stanje pripravljenosti.",
     "download_failed": "Prenos ni uspel",
     "successfully_downloaded": "Uspešno preneseno",
-    "program_eco_cotton": "",
-    "program_storage_dry_cotton": "",
-    "program_iron_bry_cotton": "",
-    "program_mixed_laundry": "",
-    "program_wool_silk": "",
-    "program_synthetic": "",
-    "program_bedding_towels": "",
-    "program_down_bulky_items": "",
-    "program_quick_pro_cotton": "",
-    "program_shirts_blouses": "",
-    "program_anti_allergy": "",
-    "program_waterproofing": "",
-    "program_steam_wrinkle_card": "",
-    "program_airing": "",
-    "program_drum_sanitize": "",
-    "program_time_program": "",
+    "program_eco_cotton": "ECO bombaž",
+    "program_storage_dry_cotton": "Bombaž suho",
+    "program_iron_bry_cotton": "Bombaž za likanje",
+    "program_mixed_laundry": "Mešano perilo",
+    "program_wool_silk": "Volna / Svila",
+    "program_synthetic": "Sintetika",
+    "program_bedding_towels": "Rjuhe / Brisače",
+    "program_down_bulky_items": "Puh / Večji kosi",
+    "program_quick_pro_cotton": "Quick Pro bombaž",
+    "program_shirts_blouses": "Srajce / Bluze",
+    "program_anti_allergy": "Protialergijsko",
+    "program_waterproofing": "Impregniranje",
+    "program_steam_wrinkle_card": "Glajenje gub s paro",
+    "program_airing": "Prezračevanje",
+    "program_drum_sanitize": "Čiščenje bobna",
+    "program_time_program": "Časovni program",
     "cancel_all": "",
     "will_add_room_key": "## bo dodan na vaš seznam sob.",
-    "change_display_language_tips": "",
+    "change_display_language_tips": "Spremenite jezik na vaši napravi.",
     "add_rooms": "Dodaj sobe",
-    "adjust_brightness_tips": "",
+    "adjust_brightness_tips": "Prilagodite svetlost zaslona vaše naprave.",
     "climate_control": "Klimatska naprava",
     "rooms_multi_key": "sobe",
-    "devices_multi_key": "",
+    "devices_multi_key": "Naprave",
     "easy_view": "Enostaven pogled",
     "easy_view_tips": "Ko je aktiviran, bo besedilo na zaslonu vaše naprave večje in lažje berljivo.",
     "display_logotype": "Prikaži logotip",
@@ -3232,7 +3231,7 @@
     "reset_program_list": "Ponastavi seznam programov",
     "reset_program_list_tips": "S tem boste seznam programov ponastavili nazaj na privzeto v napravi in aplikaciji.",
     "my_address_desc": "",
-    "reset_program_list_pop_tips": "",
+    "reset_program_list_pop_tips": "Osvežili boste seznam programov. Postopek osveževanja za približno 2 minuti onemogoči uporabo naprave.",
     "stand_by_title": "Vaša naprava je v pripravljenosti.",
     "stand_by_content": "1.Pritisnite gumb za vklop več kot 3 sekunde, da spremenite stanje.\n2.Če ne deluje, najprej odklenite.",
     "hum_box_title": "",
@@ -3248,13 +3247,13 @@
     "hide_program_desc": "",
     "water_drain_desc": "Ta funkcija vam omogoča, da izberete, kaj naj naprava naredi s kondenzirano vodo, ki nastane med sušenjem. »Rezervoar« pomeni, da se ta voda zbira v namenskem rezervoarju za vodo in ga je treba občasno izprazniti. »Odtok« pomeni, da je uporabnik priključil aparat na odtok za odpadne vode, tako da se voda lahko odvaja neposredno, mimo rezervoarja.",
     "water_drain_tips": "Ta funkcija je prvotno nastavljena na napravi. Tukaj bo prikazana privzeta možnost, izbrana na napravi.",
-    "air_care_general": "",
+    "air_care_general": "Splošno",
     "air_care_pet": "",
     "air_care_child": "",
     "air_care_elder": "",
     "drum_illumination_desc": "Osvetlitev bobna osvetli notranjost bobna, kar vam pomaga pri polnjenju in praznjenju stroja - preprosto lažje vidite preostalo nogavico v bobnu. Prav tako olajša pregled pri čiščenju dvigal in vložkov dvigal.",
     "turn_on_drum_illumination": "Vklop/izklop osvetlitve",
-    "wine_time": "",
+    "wine_time": "Čas",
     "delete_account_camel_case": "Brisanje računa",
     "program_mode_desc": "Programski način vam omogoča, da prilagodite program sušenja in ga prilagodite svojim potrebam. Spodaj si lahko preberete o različnih načinih in njihovi funkcionalnosti.",
     "program_mode_available": "Na voljo so naslednji načini pranja:",
@@ -3346,14 +3345,14 @@
     "enter_your_room_name_key": "",
     "after_sale_report_failed_desc": "",
     "country_and_region": "",
-    "rf_ai": "",
-    "exit_ai_mode_toast": "",
+    "rf_ai": "AI",
+    "exit_ai_mode_toast": "Ročna nastavitev temperature; izhod iz načina ECO",
     "rf_fuzzy_desc": "",
     "after_sale_unsupported_ts_tips": "Oprostite, vendar informacije o odpravljanju težav za to napravo trenutno niso na voljo. Naša ekipa si prizadeva, da bi kmalu zagotovila podporo za to napravo.",
     "after_sale_unsupported_ri_tips": "Oprostite, vendar prijava težave za to napravo trenutno ni na voljo. Naša ekipa si prizadeva, da bi kmalu zagotovila podporo za to napravo.",
     "degerming": "Razkuževanje",
     "no_spin": "Brez ožemanja",
-    "wm_program_mode_normal_desc": "",
+    "wm_program_mode_normal_desc": "Ta način je privzet in ne bo spremenil vašega izbranega programa.",
     "wm_program_mode_green_desc": "",
     "wm_program_mode_speed_desc": "",
     "wm_program_mode_night_desc": "",
@@ -3392,7 +3391,7 @@
     "choose_net_method": "Izberite način omrežja",
     "wifi": "",
     "wired": "",
-    "appliance_been_found": "",
+    "appliance_been_found": "Najden je bil aparat. Prosimo, izberite napravo, ki jo želite dodati.",
     "wifi_id": "",
     "dw_remote_control_content": "",
     "dw_offline_title": "",
@@ -3405,7 +3404,7 @@
     "auto_super_rinse": "Samodejno super izpiranje",
     "auto_super_rinse_desc": "",
     "enable_auto_super_rinse": "",
-    "dw_super_rinse": "",
+    "dw_super_rinse": "Super izpiranje",
     "dw_uv_mode": "UV Način",
     "dw_storage_mode": "",
     "air_shower": "Zračna prha",
@@ -3422,7 +3421,7 @@
     "enable_auto_dose_desc": "",
     "tank_refilled_tips": "",
     "dosing_type": "",
-    "dose_level": "",
+    "dose_level": "raven odmerka",
     "tank_a_dosing_type_desc": "",
     "tank_b_dosing_type_desc": "",
     "tank_a_dose_level_desc": "",
@@ -3431,7 +3430,7 @@
     "click_here": "",
     "oven_hi8_setup_1": "",
     "oven_hi8_setup_2": "",
-    "oven_hi8_setup_3": "",
+    "oven_hi8_setup_3": "Omrežje naprave je zdaj odprto za povezavo. \nKliknite NAPREJ za nadaljevanje.",
     "oven_hi8_pair_2": "",
     "oven_hi8_pair_3": "",
     "program_tank_a_desc": "",
@@ -3568,7 +3567,7 @@
     "add_new": "Dodaj novo",
     "chef_recipe": "",
     "recipe_assistant": "",
-    "shopping_list": "",
+    "shopping_list": "Nakupovalni seznam",
     "scanned_code_not_recognized": "Optično prebrana koda ni bila prepoznana",
     "scan_correct_device_code": "Skenirajte pravilno kodo naprave",
     "best_for": "",
@@ -3594,7 +3593,7 @@
     "start_end_tip": "“Začetni čas” in “Končni čas” ne moreta biti enaka.",
     "filter_result_of": "",
     "asko_oven_language": "",
-    "asko_oven_modes": "",
+    "asko_oven_modes": "Načini",
     "asko_oven_control": "",
     "asko_oven_show_date": "",
     "previous": "",
@@ -3609,7 +3608,7 @@
     "recipe_type_desserts": "",
     "recipe_type_lunches": "",
     "recipe_type_main_dishes": "",
-    "recipe_type_sider_disher": "",
+    "recipe_type_sider_disher": "Priloga",
     "recipe_main_ingredients_vegetables": "",
     "recipe_main_ingredients_savoury_pastries": "",
     "recipe_main_ingredients_grains": "",
@@ -3634,7 +3633,7 @@
     "our_recommendation": "",
     "no_search_results": "",
     "let_us_try_another_word": "",
-    "no_device_search": "",
+    "no_device_search": "Iskana ni bila nobena naprava",
     "no_device_confirm": "Prosimo potrdite, da je prehod učinkovito povezan s sistemom za klimatizacijo",
     "cook_with_##": "",
     "asko_oven_set_time_date": "",
@@ -3648,7 +3647,7 @@
     "wm_program_mode_time_care_1_desc": "",
     "asko_oven_adaptive_brightness": "",
     "online_tip": "spletno",
-    "atw_tip": "",
+    "atw_tip": "ATW",
     "close_all": "Zapri Vse",
     "circle_mode_des": "Način delovanja kanala 1 in kanala 2 je enak",
     "select_c_m": "Izberite Vrsto Kroga",
@@ -3657,7 +3656,7 @@
     "all_day": "Celodnevni",
     "asko_oven_display_setting_content": "",
     "asko_oven_brightness_content": "",
-    "asko_oven_display_content": "",
+    "asko_oven_display_content": "Nastavite velikost pisave za besedilo na vinskem zaslonu.",
     "asko_oven_show_date_content": "",
     "asko_oven_show_bg_content": "",
     "asko_oven_light_setting_content": "",
@@ -3668,13 +3667,13 @@
     "asko_oven_brightness_light_content": "",
     "asko_oven_time_out_content": "",
     "asko_oven_control_settings": "",
-    "asko_oven_control_setting_content": "",
+    "asko_oven_control_setting_content": "Nastavite svetlost zaslona vaše naprave, spremenite barvno temo, velikost pisave in nastavite, kdaj zaslon vaše naprave preklopi v stanje pripravljenosti.",
     "asko_oven_camera_content": "",
-    "asko_oven_proximity_sensor": "",
+    "asko_oven_proximity_sensor": "Senzor bližine",
     "asko_oven_proximity_sensor_content": "",
     "asko_oven_distant_user_detected": "",
-    "asko_oven_display_change_to": "",
-    "asko_oven_light_change_to": "",
+    "asko_oven_display_change_to": "Spremembe prikaza na",
+    "asko_oven_light_change_to": "Se luči spremenijo v",
     "asko_oven_door_sensor_wake_up": "",
     "asko_oven_door_sensor_wake_up_content": "",
     "asko_oven_brand_splash": "",
@@ -3684,8 +3683,8 @@
     "asko_oven_inactivity_time_out_content": "",
     "asko_oven_duration_of_clock": "",
     "asko_oven_duration_of_clock_content": "",
-    "dw_dish_assist": "",
-    "dw_help_support": "",
+    "dw_dish_assist": "Pomočnik za pomivanje posode",
+    "dw_help_support": "Pomoč in podpora",
     "dryer_link": "Povezava sušilnika",
     "dryer_link_tips": "Ko je omogočena funkcija za sušenje vlaken, se vaš program pranja po končanem pranju samodejno prenese v izbrani sušilni stroj.",
     "enable_on_this_appliance": "Omogoči na tej napravi",
@@ -3694,7 +3693,7 @@
     "steam_disinfection": "",
     "asko_oven_light_brightness": "",
     "asko_oven_sound_alarms": "",
-    "asko_oven_eco_mode_content": "",
+    "asko_oven_eco_mode_content": "Pomaga zmanjšati porabo energije in varčuje z električno energijo. Naprava bo še naprej delovala, medtem ko bodo dodatne funkcije, kot so svetloba, zaslon, senzor bližine in vrata, onemogočene.",
     "dw_error_desc_f11": "Izliv vode",
     "dw_error_desc_f12": "Vhod vode",
     "dw_error_desc_f40": "Vstopni ventil",
@@ -3728,7 +3727,7 @@
     "delete_all_schedu_tips": "Ali ste prepričani, da želite izbrisati ves razpored?",
     "edit_scheduling": "Uredi razpored",
     "target_key": "cilj",
-    "asko_oven_factory_reset_content": "",
+    "asko_oven_factory_reset_content": "Aparat je mogoče ponastaviti nazaj na tovarniške nastavitve.",
     "invalid_input": "",
     "key": "Slovenia 斯洛文尼亚",
     "filename": "i18n_sl.json",
@@ -3906,8 +3905,8 @@
     "about_energy_saving_key": "Delež varčevanja z energijo",
     "rf_uv_tech_desc": "Vgrajena UV svetloba bo samodejno zmanjšala 99,99%* bakterij v vodni poti.",
     "other_rinse": "",
-    "search_again_title": "",
-    "search_again_content": "",
+    "search_again_title": "Potrdite za ponovno iskanje?",
+    "search_again_content": "Ponovno iskanje bo posodobilo število naprav, nadzorna funkcija pa med postopkom iskanja ne bo na voljo.",
     "select_at_least_one_device": "Prosimo, izberite vsaj eno napravo.",
     "ri_select_address_tips": "",
     "default_address": "",
@@ -3944,5 +3943,8 @@
     "wm86_and_td76_ui1_p_step2": "Obrnite gumb, da se premaknete na \"Dodaj napravo\" in kliknite \"Enter\".",
     "how_data_is_calculate_key": "Kako se podatki izračunajo",
     "energy_select_device_ktip_key": "Prosimo, upoštevajte, da lahko način ECO zaženete samo na napravah, ki so v delovanju.",
-    "CL_SM_CM_devices_are_running_eco_mode": "## naprave uporabljajo ECOmode"
+    "CL_SM_CM_devices_are_running_eco_mode": "## naprave uporabljajo ECOmode",
+    "CL_CF_AB_licenses_and_attributions": "Licence in avtorstva",
+    "CL_CF_AB_licenses_content": "Ta aplikacija uporablja naslednje odprtokodne projekte in sredstva: \n\n Pisava: Roboto\n Licencirano pod licenco Apache, različica 2.0 Copyright 2011 Google Inc.",
+    "CL_CF_LG_legal": "Pravno"
 }
