--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -1755,7 +1755,7 @@
     "allow_to_location": "Tillåt platsåtkomst",
     "ask_to_location": "Vänligen aktivera platsåtkomst i inställningarna",
     "pump_create_holiday_hint": "Avbryt timern på kontrollpanelen.",
-    "sabbath_isactive_please_closed": "",
+    "sabbath_isactive_please_closed": "Apparaten är i sabbatsläge. För att använda apparatens fjärrkontroll inaktivera sabbatsläget på apparaten.",
     "sabbath_mode_active": "Sabbatsläge aktivt",
     "door_notification": "Dörravisering",
     "pump_sterilizing": "Sterilisering...",
@@ -1849,7 +1849,7 @@
     "STR_PROG_ION_TECH": "IonTech",
     "STR_PROG_TIME_PROGRAM": "Tidsprogram",
     "STR_PROG_SELFCLEANING": "Självrengörande",
-    "stove": "",
+    "stove": "Spis",
     "add_device": "Lägg till enhet",
     "get_manuals": "Skaffa manualer",
     "device_not_on_this_list": "ENHET INTE PÅ DENNA LISTA",
@@ -1907,7 +1907,7 @@
     "remove_wine_bottle": "Är du säker på att du vill ta bort din vinflaska?",
     "add_wine_success": "Tillagd",
     "dont_show_again": "Visa inte det här meddelandet igen",
-    "pind_status_bridge": "",
+    "pind_status_bridge": "Bro",
     "wm_most_usage_week": "Mest användning av veckan",
     "wm_most_usage_month": "Mest användning av månaden",
     "wm_most_usage_year": "Mest användning av året",
@@ -1957,8 +1957,8 @@
     "paused_tips": "Tvätten i ## är pausad.",
     "program_duration": "PROGRAMMETS VARAKTIGHET",
     "extra_anticrease": "Anti veck",
-    "ac_lr_swing": "",
-    "ac_ud_swing": "",
+    "ac_lr_swing": "LR gunga",
+    "ac_ud_swing": "UD sving",
     "f_e_exhaust_hightemp": "Avgastemperaturen är för hög",
     "f_e_high_pressure": "högspänningsfel",
     "f_e_low_pressure": "lågspänningsfel",
@@ -1988,7 +1988,7 @@
     "drying_in_x_has_stopped": "Torkning i ## har stoppats.",
     "dry_finish_tip": "Rengör filtren efter avslutad torkning.",
     "washer_atag_50_cs_step4": "Enhetens nätverk är nu öppet för anslutning. \nKlicka på NÄSTA för att fortsätta.",
-    "washer_atag_cs_step4": "",
+    "washer_atag_cs_step4": "Nätverket för denna apparat är nu öppet att ansluta till.\n Klicka på NÄSTA för att fortsätta.",
     "bio14_cs_step1": "Slå på ugnen.\nTryck på \"plus\"-symbolen i det övre vänstra hörnet av huvudskärmen för att öppna menyn.\nVälj \"INSTÄLLNINGAR\".\nVälj \"NETWORK CONNECTION\".",
     "bio14_cs_step2": "Om Wi-Fi-symbolen är synlig, hoppa över detta steg.\nOm Wi-Fi-symbolen inte är synlig, tryck på \"WI-FI OFF/ON\".\nVälj \"ON\" och tryck på knappen Bekräfta.\nEnhetens Wi-Fi är redo för anslutning (Wi-Fi-symbolen visas på huvudskärmen).",
     "bio14_cs_step3": "Tryck på \"CONNECTION SETUP\".\nVälj \"SoftAP (S)\" och tryck på knappen Bekräfta.\nNedräkningstimern kommer att dyka upp.\nEnhetens nätverk är nu öppet för anslutning i 5 minuter.\nKlicka på NÄSTA för att fortsätta.",
@@ -2045,7 +2045,7 @@
     "japan_wm_detergent_standard": "Standarddosering för rengöringsmedel",
     "japan_wm_softer_standard": "Softner standarddosering",
     "back_to_error": "TILLBAKA TILL FEL",
-    "japan_wm_highlight_feature": "",
+    "japan_wm_highlight_feature": "Huvudfunktionspresentation",
     "instructions_cooling_step_5": "Bekräfta genom att trycka på bekräftelseknappen.\n\"CS\", bekräftelseknappen och Wi-Fi-symbolen börjar blinka.\nKlicka på NÄSTA för att fortsätta.",
     "airdry_duration": "LUFTTORK DURATION",
     "ble_ota_celsius_cooking": "Celsius°Cooking™",
@@ -2076,7 +2076,6 @@
     "ble_ota_step_stop_title": "Vill du stoppa firmwareuppdateringen?",
     "ble_ota_step_progress_hint1": "Förbereder uppdateringen...",
     "ble_ota_step_progress_hint2": "Uppdaterar...",
-    "ble_ota_error_sub_title": "Uppdatering av firmware misslyckades",
     "ble_ota_error_content": "Håll dina enheter nära medan du uppdaterar.\r\nKontrollera din Bluetooth-anslutning.",
     "ble_ota_error_exit": "AVSLUTA UPPDATERING",
     "ble_ota_unselect_device": "Inget Bluetooth-tillbehör valt!",
@@ -2587,7 +2586,7 @@
     "f_e_incom_tip": "Kommunikationsfel inomhus-utomhus",
     "and": "och",
     "remove_wine_tips": "Du kan hitta borttagna vinflaskor genom att använda filtret ## i det övre högra hörnet av din inventering.",
-    "onholiday_start_favorite_tip": "",
+    "onholiday_start_favorite_tip": "Enheten är i semesterläge. Avaktivera semesterläget och försök igen!",
     "Invalid_Timer_key": "Ogiltig timer",
     "months": "månader",
     "end_at": "Slutar kl",
@@ -2622,10 +2621,10 @@
     "wine_notes_too_long": "anteckningarna är för långa",
     "wine_cabinet_zone": "Vinskåpszon",
     "change_wifi_program": "Ändra Wi-Fi-program",
-    "change_wifi_program_desc": "",
+    "change_wifi_program_desc": "Du håller på att ändra det befintliga programmet xxxx på din enhet under Wi-Fi-positionen med ett nytt program xxx.",
     "active_wifi_program": "Aktivt Wi-Fi-program",
-    "change_wifi_program_upper": "",
-    "change_wifi_program_tips": "",
+    "change_wifi_program_upper": "ÄNDRA Wi-Fi-PROGAM",
+    "change_wifi_program_tips": "Välj det program du vill ha på din enhet under WI-Fi-programpositionen.",
     "adding_program_to_the_device": "Lägger till program till enheten.",
     "adding_program_to_the_device_tips": "Detta kan ta upp till 30 sekunder. Alla andra funktioner på enheten är inaktiverade.",
     "january_all": "Jan",
@@ -2774,7 +2773,7 @@
     "asko_offline_content_t": "Se till att ditt skåp är anslutet till ett lokalt trådlöst nätverk.",
     "asko_offline_content_th": "Kontrollera din WiFi-signalstyrka. Om signalen är svag kan det bero på att routern är för långt borta från skåpet.",
     "hide_clock_on_display": "Dölj klockan på displayen",
-    "ac_fresh_air": "",
+    "ac_fresh_air": "Frisk luft",
     "ac_fresh_air_des": "Inför frisk luft i rummet genom skiktad rening, vilket gör människor fulla av vitalitet.",
     "ac_both_sides": "Båda sidor",
     "ac_swing_right": "Höger",
@@ -3088,11 +3087,11 @@
     "scan_again": "skanna igen",
     "last_scanned": "Senast skannad",
     "energy_used": "Energiförbrukning",
-    "dw_statistics_desc": "",
+    "dw_statistics_desc": "Dessa statistiska data är baserade på nätverksstatistik, och en del av datan är baserad på laboratorieförhållanden som mätts, endast för användarnas referens.",
     "total_cycles": "",
     "dw_error_f56": "",
     "washer_dishes_stop": "",
-    "washer_stopped": "",
+    "washer_stopped": "Tvätt i ## har stoppats.",
     "dw_dish_clean": "",
     "dw_error_f43": "",
     "dw_error_f65": "",
@@ -3190,30 +3189,30 @@
     "system_settings_content": "Ställ in ljusstyrkan på enhetens skärm, ändra färgtema, teckenstorlek och ställ in när enhetens skärm går i vänteläge.",
     "download_failed": "Nedladdning misslyckad",
     "successfully_downloaded": "Laddades ned",
-    "program_eco_cotton": "",
-    "program_storage_dry_cotton": "",
-    "program_iron_bry_cotton": "",
-    "program_mixed_laundry": "",
-    "program_wool_silk": "",
-    "program_synthetic": "",
-    "program_bedding_towels": "",
-    "program_down_bulky_items": "",
-    "program_quick_pro_cotton": "",
-    "program_shirts_blouses": "",
-    "program_anti_allergy": "",
-    "program_waterproofing": "",
-    "program_steam_wrinkle_card": "",
-    "program_airing": "",
-    "program_drum_sanitize": "",
-    "program_time_program": "",
+    "program_eco_cotton": "ECO bomull",
+    "program_storage_dry_cotton": "Torr bomull",
+    "program_iron_bry_cotton": "Stryktorrt bomull",
+    "program_mixed_laundry": "Blandad tvätt",
+    "program_wool_silk": "Ylle / Silke",
+    "program_synthetic": "Syntet",
+    "program_bedding_towels": "Sängkläder / Handdukar",
+    "program_down_bulky_items": "Dun / Täcken",
+    "program_quick_pro_cotton": "Kort intensiv",
+    "program_shirts_blouses": "Skjortor / Blusar",
+    "program_anti_allergy": "Anti-allergi",
+    "program_waterproofing": "Impregnering",
+    "program_steam_wrinkle_card": "Ånga skrynkel",
+    "program_airing": "Luftning",
+    "program_drum_sanitize": "Trumrengöring",
+    "program_time_program": "Tidsprogram",
     "cancel_all": "",
     "will_add_room_key": "## kommer att läggas till din rumslista.",
-    "change_display_language_tips": "",
+    "change_display_language_tips": "Ändra visningsspråket på din enhet.",
     "add_rooms": "Lägg till rum",
-    "adjust_brightness_tips": "",
+    "adjust_brightness_tips": "Justera ljusstyrkan på enhetens skärm.",
     "climate_control": "Klimatanläggning",
     "rooms_multi_key": "rum",
-    "devices_multi_key": "",
+    "devices_multi_key": "enheter",
     "easy_view": "Enkel utsikt",
     "easy_view_tips": "När den är aktiverad blir displaytexten på din enhet större och lättare att läsa.",
     "display_logotype": "Visa logotyp",
@@ -3232,7 +3231,7 @@
     "reset_program_list": "Återställ programlistan",
     "reset_program_list_tips": "Detta kommer att återställa din programlista till standard på din enhet och app.",
     "my_address_desc": "",
-    "reset_program_list_pop_tips": "",
+    "reset_program_list_pop_tips": "Du håller på att uppdatera programlistan. Uppdateringsprocessen kommer att inaktivera användningen av apparaten i ca. 2 minuter.",
     "stand_by_title": "Din apparat är i standbyläge.",
     "stand_by_content": "1.Tryck på strömbrytaren i mer än 3 sekunder för att ändra status.\n2.Om det inte fungerar, lås upp det först.",
     "hum_box_title": "",
@@ -3248,13 +3247,13 @@
     "hide_program_desc": "",
     "water_drain_desc": "Denna funktion låter dig välja vad apparaten ska göra med kondensvattnet som produceras under torkning. \"Tank\" betyder att detta vatten samlas i den dedikerade vattentanken och bör tömmas med jämna mellanrum. \"Tömning\" betyder att användaren anslutit apparaten till ett avloppsavlopp, så att vattnet kan slängas direkt, förbi tanken.",
     "water_drain_tips": "Denna funktion är initialt inställd på apparaten. Standardalternativet som valts på apparaten kommer att visas här.",
-    "air_care_general": "",
+    "air_care_general": "Allmänt",
     "air_care_pet": "",
     "air_care_child": "",
     "air_care_elder": "",
     "drum_illumination_desc": "Trumbelysningen lyser upp trummans insida, vilket hjälper dig vid lastning och tömning av maskinen - det är helt enkelt lättare att se den kvarvarande strumpan inuti trumman. Det underlättar även inspektionen vid rengöring av lyftare och lyftinsatser.",
     "turn_on_drum_illumination": "Slå på/av belysningen",
-    "wine_time": "",
+    "wine_time": "Tid",
     "delete_account_camel_case": "Ta bort konto",
     "program_mode_desc": "Programläget låter dig anpassa ditt torkprogram och justera det baserat på dina behov. Nedan kan du läsa om de olika lägena och deras funktionalitet.",
     "program_mode_available": "Dostupni su sledeći režimi pranja:",
@@ -3346,14 +3345,14 @@
     "enter_your_room_name_key": "",
     "after_sale_report_failed_desc": "",
     "country_and_region": "",
-    "rf_ai": "",
-    "exit_ai_mode_toast": "",
+    "rf_ai": "AI",
+    "exit_ai_mode_toast": "Manuell temperaturjustering Avsluta ECO-läge",
     "rf_fuzzy_desc": "",
     "after_sale_unsupported_ts_tips": "Vi är ledsna, men felsökningsinformation för den här enheten är för närvarande inte tillgänglig. Vårt team arbetar med att ge support för den här enheten snart.",
     "after_sale_unsupported_ri_tips": "Vi är ledsna, men att rapportera ett problem för den här enheten är för närvarande inte tillgängligt. Vårt team arbetar med att ge support för den här enheten snart.",
     "degerming": "Avdödning",
     "no_spin": "Ingen rotation",
-    "wm_program_mode_normal_desc": "",
+    "wm_program_mode_normal_desc": "Detta läge är standard och kommer inte att göra några ändringar i ditt valda program.",
     "wm_program_mode_green_desc": "",
     "wm_program_mode_speed_desc": "",
     "wm_program_mode_night_desc": "",
@@ -3392,7 +3391,7 @@
     "choose_net_method": "Välj nätverksmetod",
     "wifi": "",
     "wired": "",
-    "appliance_been_found": "",
+    "appliance_been_found": "En produkt har hittats. Välj den enhet som ska läggas till.",
     "wifi_id": "",
     "dw_remote_control_content": "",
     "dw_offline_title": "",
@@ -3405,7 +3404,7 @@
     "auto_super_rinse": "Auto supersköljning",
     "auto_super_rinse_desc": "",
     "enable_auto_super_rinse": "",
-    "dw_super_rinse": "",
+    "dw_super_rinse": "Supersköljning",
     "dw_uv_mode": "UV-läge",
     "dw_storage_mode": "",
     "air_shower": "Luft dusch",
@@ -3422,7 +3421,7 @@
     "enable_auto_dose_desc": "",
     "tank_refilled_tips": "",
     "dosing_type": "",
-    "dose_level": "",
+    "dose_level": "dosnivå",
     "tank_a_dosing_type_desc": "",
     "tank_b_dosing_type_desc": "",
     "tank_a_dose_level_desc": "",
@@ -3431,7 +3430,7 @@
     "click_here": "",
     "oven_hi8_setup_1": "",
     "oven_hi8_setup_2": "",
-    "oven_hi8_setup_3": "",
+    "oven_hi8_setup_3": "Enhetens nätverk är nu öppet för anslutning. \nKlicka på NÄSTA för att fortsätta.",
     "oven_hi8_pair_2": "",
     "oven_hi8_pair_3": "",
     "program_tank_a_desc": "",
@@ -3530,7 +3529,7 @@
     "blue_power_off_title": "Slå på Bluetooth",
     "blue_permission_off_title": "ConnectLife har inte behörighet att använda Bluetooth",
     "allow_bluetooth": "",
-    "blue_permission_off_pop_title": "",
+    "blue_permission_off_pop_title": "ConnectLife använder Bluetooth för att hitta, ansluta till och bestämma positionen för enheter i närheten. Du kan alltid ändra inställningarna i din telefons systeminställningar.",
     "blue_ios_setting": "",
     "blue_cancel": "FORTSÄTT UTAN BLUETOOTH",
     "blue_power_off_pop_title": "ConnectLife vill slå PÅ Bluetooth för den här enheten",
@@ -3568,7 +3567,7 @@
     "add_new": "Lägg till ny",
     "chef_recipe": "",
     "recipe_assistant": "",
-    "shopping_list": "",
+    "shopping_list": "Inköpslista",
     "scanned_code_not_recognized": "Den skannade koden kändes inte igen",
     "scan_correct_device_code": "Skanna korrekt enhetskod",
     "best_for": "",
@@ -3594,7 +3593,7 @@
     "start_end_tip": "“Starttid” och “Sluttid” kan inte vara samma.",
     "filter_result_of": "",
     "asko_oven_language": "",
-    "asko_oven_modes": "",
+    "asko_oven_modes": "Lägen",
     "asko_oven_control": "",
     "asko_oven_show_date": "",
     "previous": "",
@@ -3609,7 +3608,7 @@
     "recipe_type_desserts": "",
     "recipe_type_lunches": "",
     "recipe_type_main_dishes": "",
-    "recipe_type_sider_disher": "",
+    "recipe_type_sider_disher": "Sidorätt",
     "recipe_main_ingredients_vegetables": "",
     "recipe_main_ingredients_savoury_pastries": "",
     "recipe_main_ingredients_grains": "",
@@ -3634,7 +3633,7 @@
     "our_recommendation": "",
     "no_search_results": "",
     "let_us_try_another_word": "",
-    "no_device_search": "",
+    "no_device_search": "Ingen enhet söktes",
     "no_device_confirm": "Vänligen bekräfta att gatewayen är effektivt ansluten till luftkonditioneringssystemet",
     "cook_with_##": "",
     "asko_oven_set_time_date": "",
@@ -3648,7 +3647,7 @@
     "wm_program_mode_time_care_1_desc": "",
     "asko_oven_adaptive_brightness": "",
     "online_tip": "online",
-    "atw_tip": "",
+    "atw_tip": "ATW",
     "close_all": "Stäng Alla",
     "circle_mode_des": "Arbetsläget för kanal 1 och kanal 2 är detsamma",
     "select_c_m": "Välj Krets Typ",
@@ -3657,7 +3656,7 @@
     "all_day": "Hela dagen",
     "asko_oven_display_setting_content": "",
     "asko_oven_brightness_content": "",
-    "asko_oven_display_content": "",
+    "asko_oven_display_content": "Ställ in teckenstorleken för text på vindisplayen.",
     "asko_oven_show_date_content": "",
     "asko_oven_show_bg_content": "",
     "asko_oven_light_setting_content": "",
@@ -3668,13 +3667,13 @@
     "asko_oven_brightness_light_content": "",
     "asko_oven_time_out_content": "",
     "asko_oven_control_settings": "",
-    "asko_oven_control_setting_content": "",
+    "asko_oven_control_setting_content": "Ställ in ljusstyrkan på enhetens skärm, ändra färgtema, teckenstorlek och ställ in när enhetens skärm går i vänteläge.",
     "asko_oven_camera_content": "",
-    "asko_oven_proximity_sensor": "",
+    "asko_oven_proximity_sensor": "Närhetssensor",
     "asko_oven_proximity_sensor_content": "",
     "asko_oven_distant_user_detected": "",
-    "asko_oven_display_change_to": "",
-    "asko_oven_light_change_to": "",
+    "asko_oven_display_change_to": "Displayet ändras till",
+    "asko_oven_light_change_to": "Ljus ändras till",
     "asko_oven_door_sensor_wake_up": "",
     "asko_oven_door_sensor_wake_up_content": "",
     "asko_oven_brand_splash": "",
@@ -3684,8 +3683,8 @@
     "asko_oven_inactivity_time_out_content": "",
     "asko_oven_duration_of_clock": "",
     "asko_oven_duration_of_clock_content": "",
-    "dw_dish_assist": "",
-    "dw_help_support": "",
+    "dw_dish_assist": "Diskhjälp",
+    "dw_help_support": "Hjälp Support",
     "dryer_link": "Torkarlänk",
     "dryer_link_tips": "Med torktumlarens luddfunktion aktiverad överförs ditt tvättprogram automatiskt till den valda torktumlaren efter att tvätten är klar.",
     "enable_on_this_appliance": "Aktivera på denna apparat",
@@ -3694,7 +3693,7 @@
     "steam_disinfection": "",
     "asko_oven_light_brightness": "",
     "asko_oven_sound_alarms": "",
-    "asko_oven_eco_mode_content": "",
+    "asko_oven_eco_mode_content": "Hjälper till att minska energiförbrukningen och sparar el. Apparaten kommer att fortsätta att fungera, medan extra funktioner som ljus, display, närhet och dörrsensor kommer att inaktiveras.",
     "dw_error_desc_f11": "Vattenutlopp",
     "dw_error_desc_f12": "Vatteninlopp",
     "dw_error_desc_f40": "Inloppsventil",
@@ -3728,7 +3727,7 @@
     "delete_all_schedu_tips": "Är du säker på att du vill ta bort alla schemaläggningar?",
     "edit_scheduling": "Redigera schemaläggning",
     "target_key": "mål",
-    "asko_oven_factory_reset_content": "",
+    "asko_oven_factory_reset_content": "Apparaten kan återställas till fabriksinställningarna.",
     "invalid_input": "",
     "key": "Swedish 瑞典",
     "filename": "i18n_sv.json",
@@ -3906,8 +3905,8 @@
     "about_energy_saving_key": "Energibesparingsandel",
     "rf_uv_tech_desc": "Den inbyggda UV-belysningen kommer automatiskt att minska 99,99% av bakterierna i vattenvägen.",
     "other_rinse": "",
-    "search_again_title": "",
-    "search_again_content": "",
+    "search_again_title": "Bekräfta att söka igen?",
+    "search_again_content": "Eftersökning kommer att uppdatera antalet enheter och kontrollfunktionen kommer inte att vara tillgänglig under sökprocessen.",
     "select_at_least_one_device": "Vänligen välj minst en enhet.",
     "ri_select_address_tips": "",
     "default_address": "",
@@ -3944,5 +3943,8 @@
     "wm86_and_td76_ui1_p_step2": "Vrid på knappen för att flytta till \"Lägg till enhet\" och klicka på \"Enter\".",
     "how_data_is_calculate_key": "Hur data beräknas",
     "energy_select_device_ktip_key": "Observera att du bara kan starta ECO-läget på enheter som är i drift.",
-    "CL_SM_CM_devices_are_running_eco_mode": "## enheter kör ECOmode"
+    "CL_SM_CM_devices_are_running_eco_mode": "## enheter kör ECOmode",
+    "CL_CF_AB_licenses_and_attributions": "Licenser och attribut",
+    "CL_CF_AB_licenses_content": "Denna applikation använder följande öppen källkodsprojekt och tillgångar: \n\n Typsnitt: Roboto\n Licensierad under Apache-licensen, version 2.0 Copyright 2011 Google Inc.",
+    "CL_CF_LG_legal": "Rättslig"
 }
