--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -2076,7 +2076,6 @@
     "ble_ota_step_stop_title": "Firmware-update stoppen?",
     "ble_ota_step_progress_hint1": "De update voorbereiden...",
     "ble_ota_step_progress_hint2": "Bijwerken...",
-    "ble_ota_error_sub_title": "Firmware-update mislukt",
     "ble_ota_error_content": "Houd uw apparaten in de buurt tijdens het updaten. \nControleer uw Bluetooth-verbinding.",
     "ble_ota_error_exit": "VERLAAT UPDATE",
     "ble_ota_unselect_device": "Geen Bluetooth-accessoire geselecteerd!",
@@ -3088,11 +3087,11 @@
     "scan_again": "scan opnieuw",
     "last_scanned": "Laatst gescand",
     "energy_used": "Energieverbruik",
-    "dw_statistics_desc": "",
+    "dw_statistics_desc": "Deze statistische gegevens zijn gebaseerd op netwerkstatistieken, en een deel van de gegevens is gebaseerd op laboratoriumomstandigheden gemeten, alleen ter referentie van gebruikers.",
     "total_cycles": "",
     "dw_error_f56": "",
     "washer_dishes_stop": "",
-    "washer_stopped": "",
+    "washer_stopped": "Wassen in ## is gestopt.",
     "dw_dish_clean": "",
     "dw_error_f43": "",
     "dw_error_f65": "",
@@ -3190,30 +3189,30 @@
     "system_settings_content": "Stel de helderheid van het scherm van uw apparaat in, wijzig het kleurthema en de lettergrootte en stel in wanneer het scherm van uw apparaat in de standby-modus gaat.",
     "download_failed": "Download mislukt",
     "successfully_downloaded": "Succesvol gedownload",
-    "program_eco_cotton": "",
-    "program_storage_dry_cotton": "",
-    "program_iron_bry_cotton": "",
-    "program_mixed_laundry": "",
-    "program_wool_silk": "",
-    "program_synthetic": "",
-    "program_bedding_towels": "",
-    "program_down_bulky_items": "",
-    "program_quick_pro_cotton": "",
-    "program_shirts_blouses": "",
-    "program_anti_allergy": "",
-    "program_waterproofing": "",
-    "program_steam_wrinkle_card": "",
-    "program_airing": "",
-    "program_drum_sanitize": "",
-    "program_time_program": "",
+    "program_eco_cotton": "Eco katoen",
+    "program_storage_dry_cotton": "Kastdroog katoen",
+    "program_iron_bry_cotton": "Strijkdroog katoen",
+    "program_mixed_laundry": "Gemengde was",
+    "program_wool_silk": "Wol/zijde",
+    "program_synthetic": "Synthetisch",
+    "program_bedding_towels": "Beddengoed/handdoeken",
+    "program_down_bulky_items": "Dons/grote items",
+    "program_quick_pro_cotton": "Quick Pro katoen",
+    "program_shirts_blouses": "Overhemden/blouses",
+    "program_anti_allergy": "Anti-allergie",
+    "program_waterproofing": "Impregneren",
+    "program_steam_wrinkle_card": "Stoom - kreukherstel",
+    "program_airing": "Luchten",
+    "program_drum_sanitize": "Trommelreiniging",
+    "program_time_program": "Tijdprogramma",
     "cancel_all": "",
     "will_add_room_key": "## wordt toegevoegd aan je kamerlijst.",
-    "change_display_language_tips": "",
+    "change_display_language_tips": "Wijzig de weergavetaal op uw apparaat.",
     "add_rooms": "Voeg kamers toe",
-    "adjust_brightness_tips": "",
+    "adjust_brightness_tips": "Pas de helderheid op het scherm van uw apparaat aan.",
     "climate_control": "Klimaatregeling",
     "rooms_multi_key": "kamers",
-    "devices_multi_key": "",
+    "devices_multi_key": "Apparaten",
     "easy_view": "Gemakkelijk te bekijken",
     "easy_view_tips": "Indien geactiveerd zal de displaytekst op uw apparaat groter en gemakkelijker leesbaar zijn.",
     "display_logotype": "Logotype weergeven",
@@ -3232,7 +3231,7 @@
     "reset_program_list": "Programmalijst opnieuw instellen",
     "reset_program_list_tips": "Hiermee wordt uw programmalijst op uw apparaat en app teruggezet naar de standaardwaarden.",
     "my_address_desc": "",
-    "reset_program_list_pop_tips": "",
+    "reset_program_list_pop_tips": "U staat op het punt de programmalijst te vernieuwen. Tijdens het verversen wordt het gebruik van het apparaat gedurende ongeveer 2 minuten uitgeschakeld.",
     "stand_by_title": "Uw apparaat staat in stand-by modus.",
     "stand_by_content": "1.Druk langer dan 3 seconden op de aan/uit-knop om de status te wijzigen.\n2.Als het niet werkt, ontgrendel het dan eerst.",
     "hum_box_title": "",
@@ -3248,13 +3247,13 @@
     "hide_program_desc": "",
     "water_drain_desc": "Met deze functie kunt u kiezen wat het apparaat moet doen met het condenswater dat tijdens het drogen ontstaat. “Tank” betekent dat dit water wordt opgevangen in de speciale watertank en periodiek moet worden geleegd. “Afvoer” betekent dat de gebruiker het apparaat heeft aangesloten op een afvoer, zodat het water direct kan worden afgevoerd, zonder de tank te hoeven passeren.",
     "water_drain_tips": "Deze functie is aanvankelijk ingesteld op het apparaat. Hier wordt de standaardoptie weergegeven die op het apparaat is geselecteerd.",
-    "air_care_general": "",
+    "air_care_general": "Algemeen",
     "air_care_pet": "",
     "air_care_child": "",
     "air_care_elder": "",
     "drum_illumination_desc": "De trommelverlichting verlicht de binnenkant van de trommel, wat u helpt bij het laden en legen van de machine - het is simpelweg gemakkelijker om de resterende sok in de trommel te zien. Het vergemakkelijkt ook de inspectie bij het reinigen van lifters en lifterinzetstukken.",
     "turn_on_drum_illumination": "Verlichting in-/uitschakelen",
-    "wine_time": "",
+    "wine_time": "Tijd",
     "delete_account_camel_case": "Account verwijderen",
     "program_mode_desc": "Met de programmamodus kunt u uw droogprogramma aanpassen aan uw behoeften. Hieronder leest u over de verschillende modi en hun functionaliteit.",
     "program_mode_available": "De volgende wasmodi zijn beschikbaar:",
@@ -3346,14 +3345,14 @@
     "enter_your_room_name_key": "",
     "after_sale_report_failed_desc": "",
     "country_and_region": "",
-    "rf_ai": "",
-    "exit_ai_mode_toast": "",
+    "rf_ai": "AI",
+    "exit_ai_mode_toast": "Handmatige temperatuuraanpassing Ecomodus verlaten",
     "rf_fuzzy_desc": "",
     "after_sale_unsupported_ts_tips": "Het spijt ons, maar informatie over het oplossen van problemen voor dit apparaat is momenteel niet beschikbaar. Ons team werkt eraan om binnenkort ondersteuning te bieden voor dit apparaat.",
     "after_sale_unsupported_ri_tips": "Het spijt ons, maar het melden van een probleem voor dit apparaat is momenteel niet mogelijk. Ons team werkt eraan om binnenkort ondersteuning te bieden voor dit apparaat.",
     "degerming": "Ontsmetting",
     "no_spin": "Geen draai",
-    "wm_program_mode_normal_desc": "",
+    "wm_program_mode_normal_desc": "Deze modus is de standaardmodus en brengt geen wijzigingen aan in het door u gekozen programma.",
     "wm_program_mode_green_desc": "",
     "wm_program_mode_speed_desc": "",
     "wm_program_mode_night_desc": "",
@@ -3392,7 +3391,7 @@
     "choose_net_method": "Kies netwerkmethode",
     "wifi": "",
     "wired": "",
-    "appliance_been_found": "",
+    "appliance_been_found": "Er is een apparaat gevonden. Selecteer het apparaat dat u wilt toevoegen.",
     "wifi_id": "",
     "dw_remote_control_content": "",
     "dw_offline_title": "",
@@ -3405,7 +3404,7 @@
     "auto_super_rinse": "Automatische superspoeling",
     "auto_super_rinse_desc": "",
     "enable_auto_super_rinse": "",
-    "dw_super_rinse": "",
+    "dw_super_rinse": "Super Spoelen",
     "dw_uv_mode": "UV-modus",
     "dw_storage_mode": "",
     "air_shower": "Lucht douche",
@@ -3422,7 +3421,7 @@
     "enable_auto_dose_desc": "",
     "tank_refilled_tips": "",
     "dosing_type": "",
-    "dose_level": "",
+    "dose_level": "dosis niveau",
     "tank_a_dosing_type_desc": "",
     "tank_b_dosing_type_desc": "",
     "tank_a_dose_level_desc": "",
@@ -3431,7 +3430,7 @@
     "click_here": "",
     "oven_hi8_setup_1": "",
     "oven_hi8_setup_2": "",
-    "oven_hi8_setup_3": "",
+    "oven_hi8_setup_3": "Het netwerk van het apparaat is nu open voor verbinding. \nKlik op VOLGENDE om door te gaan.",
     "oven_hi8_pair_2": "",
     "oven_hi8_pair_3": "",
     "program_tank_a_desc": "",
@@ -3568,7 +3567,7 @@
     "add_new": "Nieuwe toevoegen",
     "chef_recipe": "",
     "recipe_assistant": "",
-    "shopping_list": "",
+    "shopping_list": "Boodschappenlijst",
     "scanned_code_not_recognized": "Gescande code werd niet herkend",
     "scan_correct_device_code": "Scan de juiste apparaatcode",
     "best_for": "",
@@ -3594,7 +3593,7 @@
     "start_end_tip": "“Starttijd” en “Eindtijd” kunnen niet hetzelfde zijn.",
     "filter_result_of": "",
     "asko_oven_language": "",
-    "asko_oven_modes": "",
+    "asko_oven_modes": "Modi",
     "asko_oven_control": "",
     "asko_oven_show_date": "",
     "previous": "",
@@ -3609,7 +3608,7 @@
     "recipe_type_desserts": "",
     "recipe_type_lunches": "",
     "recipe_type_main_dishes": "",
-    "recipe_type_sider_disher": "",
+    "recipe_type_sider_disher": "Bijgerecht",
     "recipe_main_ingredients_vegetables": "",
     "recipe_main_ingredients_savoury_pastries": "",
     "recipe_main_ingredients_grains": "",
@@ -3634,7 +3633,7 @@
     "our_recommendation": "",
     "no_search_results": "",
     "let_us_try_another_word": "",
-    "no_device_search": "",
+    "no_device_search": "Er is geen apparaat gezocht",
     "no_device_confirm": "Bevestig alstublieft dat de gateway effectief is verbonden met het airconditioningsysteem",
     "cook_with_##": "",
     "asko_oven_set_time_date": "",
@@ -3648,7 +3647,7 @@
     "wm_program_mode_time_care_1_desc": "",
     "asko_oven_adaptive_brightness": "",
     "online_tip": "online",
-    "atw_tip": "",
+    "atw_tip": "ATW",
     "close_all": "Sluit Alles",
     "circle_mode_des": "Kanaal 1 en kanaal 2 werken in dezelfde modus",
     "select_c_m": "Kies Circuit Type",
@@ -3657,24 +3656,24 @@
     "all_day": "De hele dag",
     "asko_oven_display_setting_content": "",
     "asko_oven_brightness_content": "",
-    "asko_oven_display_content": "",
+    "asko_oven_display_content": "Stel de lettergrootte in voor tekst op het wijndisplay.",
     "asko_oven_show_date_content": "",
     "asko_oven_show_bg_content": "",
     "asko_oven_light_setting_content": "",
     "asko_oven_stage_light_content": "",
     "asko_oven_stage_light": "",
-    "asko_oven_color_temperature": "",
+    "asko_oven_color_temperature": "KLEURTEMPERATUUR",
     "asko_oven_color_temperature_content": "",
     "asko_oven_brightness_light_content": "",
     "asko_oven_time_out_content": "",
     "asko_oven_control_settings": "",
-    "asko_oven_control_setting_content": "",
+    "asko_oven_control_setting_content": "Stel de helderheid van het scherm van uw apparaat in, wijzig het kleurthema en de lettergrootte en stel in wanneer het scherm van uw apparaat in de standby-modus gaat.",
     "asko_oven_camera_content": "",
-    "asko_oven_proximity_sensor": "",
+    "asko_oven_proximity_sensor": "Nabijheidssensor",
     "asko_oven_proximity_sensor_content": "",
     "asko_oven_distant_user_detected": "",
-    "asko_oven_display_change_to": "",
-    "asko_oven_light_change_to": "",
+    "asko_oven_display_change_to": "Wijzigingen weergeven naar",
+    "asko_oven_light_change_to": "Lichten veranderen in",
     "asko_oven_door_sensor_wake_up": "",
     "asko_oven_door_sensor_wake_up_content": "",
     "asko_oven_brand_splash": "",
@@ -3684,8 +3683,8 @@
     "asko_oven_inactivity_time_out_content": "",
     "asko_oven_duration_of_clock": "",
     "asko_oven_duration_of_clock_content": "",
-    "dw_dish_assist": "",
-    "dw_help_support": "",
+    "dw_dish_assist": "Afwashulp",
+    "dw_help_support": "Hulp en ondersteuning",
     "dryer_link": "Droger koppeling",
     "dryer_link_tips": "Als de drogerpluisfunctie is ingeschakeld, wordt uw wasprogramma automatisch overgebracht naar de geselecteerde wasdroger nadat het wassen is voltooid.",
     "enable_on_this_appliance": "Schakel dit in op dit apparaat",
@@ -3694,7 +3693,7 @@
     "steam_disinfection": "",
     "asko_oven_light_brightness": "",
     "asko_oven_sound_alarms": "",
-    "asko_oven_eco_mode_content": "",
+    "asko_oven_eco_mode_content": "Helpt het energieverbruik te verminderen en bespaart elektriciteit. Het apparaat blijft werken, terwijl extra functies zoals licht, display, nabijheid en deursensor worden uitgeschakeld.",
     "dw_error_desc_f11": "Wateruitlaat",
     "dw_error_desc_f12": "Waterinlaat",
     "dw_error_desc_f40": "Inlaatklep",
@@ -3728,7 +3727,7 @@
     "delete_all_schedu_tips": "Weet u zeker dat u alle planning wilt verwijderen?",
     "edit_scheduling": "Planning bewerken",
     "target_key": "doel",
-    "asko_oven_factory_reset_content": "",
+    "asko_oven_factory_reset_content": "Het apparaat kan worden teruggezet naar de fabrieksinstellingen.",
     "invalid_input": "",
     "key": "Dutch 荷兰语",
     "filename": "i18n_nl.json",
@@ -3906,8 +3905,8 @@
     "about_energy_saving_key": "Energiebesparingsaandeel",
     "rf_uv_tech_desc": "De ingebouwde UV-verlichting zal automatisch 99,99%* van de bacteriën in de waterweg verminderen.",
     "other_rinse": "",
-    "search_again_title": "",
-    "search_again_content": "",
+    "search_again_title": "Bevestigen om opnieuw te zoeken?",
+    "search_again_content": "Bij opnieuw zoeken wordt het aantal apparaten bijgewerkt en is de bedieningsfunctie niet beschikbaar tijdens het zoeken.",
     "select_at_least_one_device": "Selecteer alstublieft ten minste één apparaat.",
     "ri_select_address_tips": "",
     "default_address": "",
@@ -3919,7 +3918,7 @@
     "appliance_disconnect_cannot_open_eco": "Het apparaat is losgekoppeld, controleer of WiFi en afstandsbediening zijn ingeschakeld.",
     "power_on_remote_eabled_tips": "",
     "power_on_tips": "",
-    "asko_oven_on_during_on": "",
+    "asko_oven_on_during_on": "AAN tijdens gebruik",
     "restart": "",
     "how_data_calculate_tip": "De door apparaten weergegeven gegevens kunnen variëren van andere apparaten of instrumenten. Energieverbruiksgegevens kunnen verschillen op basis van de bijwerktijd en de meetdatum. Numerieke gegevens kunnen worden afgerond, wat kleine verschillen kan veroorzaken tussen individuele en totale gegevens. Het elektriciteitsverbruik van een apparaat is afhankelijk van de werkelijke omgeving en het gebruik, wat kan verschillen van een standaard testomgeving. Maandelijkse, dagelijkse en uurlijkse totalen worden afzonderlijk geschat en kunnen niet exact optellen. Het besparingsbedrag voor elk apparaat is geschat op basis van testresultaten en kan verschillen van de werkelijke besparingen.",
     "select_statistic_range_key": "selecteer statistisch bereik",
@@ -3944,5 +3943,8 @@
     "wm86_and_td76_ui1_p_step2": "Draai aan de knop om naar \"Apparaat toevoegen\" te gaan en klik op \"Enter\".",
     "how_data_is_calculate_key": "Hoe gegevens worden berekend",
     "energy_select_device_ktip_key": "Houd er rekening mee dat u de ECO-modus alleen kunt starten bij apparaten die in werking zijn.",
-    "CL_SM_CM_devices_are_running_eco_mode": "## apparaten gebruiken ECOmode"
+    "CL_SM_CM_devices_are_running_eco_mode": "## apparaten gebruiken ECOmode",
+    "CL_CF_AB_licenses_and_attributions": "Licenties en toeschrijvingen",
+    "CL_CF_AB_licenses_content": "Deze applicatie maakt gebruik van de volgende open-sourceprojecten en middelen: \n\n Lettertype: Roboto\n Gelicentieerd onder de Apache-licentie, versie 2.0 Copyright 2011 Google Inc.",
+    "CL_CF_LG_legal": "Legaal"
 }
